What's done: - add fun to TestView that set some title to button label - create full data base of test

--- a/PsychologyTest/Base.lproj/Main.storyboard
+++ b/PsychologyTest/Base.lproj/Main.storyboard
@@ -127,39 +127,27 @@
                                         <state key="normal" title="Button">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
-                                        <connections>
-                                            <action selector="firstChoiceButton:" destination="KXl-tA-y7x" eventType="touchUpInside" id="feM-4K-i8P"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3dK-aJ-eP8">
-                                        <rect key="frame" x="0.0" y="47" width="61" height="37"/>
+                                        <rect key="frame" x="0.0" y="47" width="191" height="37"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="21"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="secondChoiceButton">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
-                                        <connections>
-                                            <action selector="secondCoiceButton:" destination="KXl-tA-y7x" eventType="touchUpInside" id="GDS-CC-Y9g"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9oo-oH-xnq">
-                                        <rect key="frame" x="0.0" y="94" width="61" height="37"/>
+                                        <rect key="frame" x="0.0" y="94" width="164" height="37"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="21"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="thirdChoiceButton">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
-                                        <connections>
-                                            <action selector="thirdChoiceButton:" destination="KXl-tA-y7x" eventType="touchUpInside" id="19Q-pi-0aM"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kG-Ti-u6z">
-                                        <rect key="frame" x="0.0" y="141" width="61" height="37"/>
+                                        <rect key="frame" x="0.0" y="141" width="166" height="37"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="21"/>
-                                        <state key="normal" title="Button">
+                                        <state key="normal" title="forthChoiceButton">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
-                                        <connections>
-                                            <action selector="forthChoiceButton:" destination="KXl-tA-y7x" eventType="touchUpInside" id="oEd-Be-CY8"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -180,8 +168,12 @@
                         <viewLayoutGuide key="safeArea" id="CFR-xn-ptA"/>
                     </view>
                     <connections>
+                        <outlet property="firstChoiceButton" destination="Ubh-7Q-W2K" id="Gq0-n0-66c"/>
+                        <outlet property="forthChoiceButton" destination="9kG-Ti-u6z" id="7l7-Jw-zfb"/>
                         <outlet property="numberOfQuestion" destination="TYo-tv-iQE" id="Xqa-Sd-HOJ"/>
                         <outlet property="progressBar" destination="RS1-ar-dsI" id="Mv7-Lr-QoF"/>
+                        <outlet property="secondChoiceButton" destination="3dK-aJ-eP8" id="DSA-32-YRp"/>
+                        <outlet property="thirdChoiceButton" destination="9oo-oH-xnq" id="aDT-3J-zMr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cTP-F5-fVk" userLabel="First Responder" sceneMemberID="firstResponder"/>
